gcc/testsuite/g++.dg/other/cv_func4.C
// PR c++/67845

typedef void F () const;

F foo;  // { dg-error "cv-qualifier" }
void foo ();
